--- a/dev/src/components/Home/styles.scss
+++ b/dev/src/components/Home/styles.scss
@@ -1,35 +1,20 @@
 
 .currency-tab{
   width:80%;
-  margin:0 auto;
-  border: 1px solid #000;
-  .currency-row{
-    display:flex;
-    height : 25px;
-    &:not(:first-child) {
-      border-top: 1px solid #000;
-    }
-    & > *:not(:first-child){
-      border-left:1px solid #000000;
-    }
-    & > * {
-     font-size : 18px;
-     line-height: 25px;
-     text-align:center;
-    }
-  }
+  
   .name{
-    width: calc((100% - 200px) * (50 / 100));
+    flex-basis: calc((100% - 200px) * (50 / 100));
   }
   .rate{
-    width: calc((100% - 200px) * (25 / 100));
+    flex-basis: calc((100% - 200px) * (25 / 100));
   }
   .inverse-rate{
-    width: calc((100% - 200px) * (25 / 100));
+    flex-basis: calc((100% - 200px) * (25 / 100));
     
   }
   .cta{
-    width: 200px;
+    flex-basis: 200px;
+    flex-grow :0;
   }
   .input-number {
     width: 50px;
