--- a/dev/src/components/Dashboard/styles.scss
+++ b/dev/src/components/Dashboard/styles.scss
@@ -1,40 +1,37 @@
 .currency-tab{
-    width:80%;
-    margin:0 auto;
-    border: 1px solid #000;
-    .currency-row{
-      display:flex;
-      height : 25px;
-      &:not(:first-child) {
-        border-top: 1px solid #000;
-      }
-      & > *:not(:first-child){
-        border-left:1px solid #000000;
-      }
-      & > * {
-       flex-grow: 0;
-       flex-shrink: 0;   
-       font-size : 18px;
-       line-height: 25px;
-       text-align:center;
-       
-      }
-    }
-    .name{
-      width: calc((100% - 200px) * (40 / 100));
-    }
-    .rate{
-      width: calc((100% - 200px) * (25 / 100));
-    }
-    .inverse-rate{
-      width: calc((100% - 200px) * (25 / 100));
-      
-    }
-    .quantity{
-        width: calc((100% - 200px) * (10 / 100));
-        
-    }
-    .cta{
-      width: 200px;
-    }
+  width:80%;
+  
+  .name{
+    flex-basis: calc((100% - 200px) * (40 / 100));
+  }
+  .rate{
+    flex-basis: calc((100% - 200px) * (20 / 100));
+  }
+  .inverse-rate{
+    flex-basis: calc((100% - 200px) * (20 / 100));
+    
+  }
+  .quantity {
+    flex-basis: calc((100% - 200px) * (20 / 100));
+  }
+
+  .cta{
+    flex-basis: 200px;
+    flex-grow :0;
+  }
+  .input-number {
+    width: 50px;
+    margin-left: 5px;
+  }
+}
+
+
+.box{
+  width:40px;
+  height:40px;
+  border: 1px solid black;
+  background-color: red;
+  &.on {
+    background-color: green;
+  }
 }
